# buddy-mlir

examples/DAPDialect/: CMakeLists.txt  iir.mlir  iirLowpass.cpp  test.mlir
include/Dialect/DAP/: DAPOps.td
lib/Conversion/LowerDAP/: LowerDAPPass.cpp
tests/Interface/core/: AudioContainerTest.cpp  CMakeLists.txt
